[tool.poetry]
name = "cac-jira"
version = "0.3.3"
description = "A command-line interface for interacting with Jira"
authors = ["Ryan Punt <ryan@mirum.org>"]
license = "MIT"
readme = "README.md"
homepage = "https://mirum.org/cac-jira/"
repository = "https://github.com/rpunt/cac-jira"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
packages = [{include = "cac_jira"}]
include = ["cac_jira/config/*.yaml"]
keywords = ["jira", "cli", "atlassian", "project-management", "command-lint", "python", "cli-tool"]

[tool.poetry.scripts]
jira = "cac_jira.cli.main:main"

[tool.poetry.dependencies]
python = "^3.9"
cac-core = ">=0.2.0,<1.0.0"  # Allow any version from 0.2.0 up to but not including 1.0.0
tabulate = "^0.9.0"
jira = "^3.8.0,<4.0.0"  # Prevent major version upgrades
pyyaml = "^6.0.2"
keyring = "^25.5.0"
argcomplete = "^3.6.2"

[tool.poetry.group.dev.dependencies]
# cac-core = {path = "../cac_core", develop = true}
mypy = "^1.3.0"
types-pyyaml = "^6.0.12"
types-tabulate = "^0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.lint.dependencies]
black = ">=23.3,<25.0"
isort = "^5.12.0"
pylint = "^2.17.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0301",  # line-too-long
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
