[project]
name = "cac-jira"
version = "0.3.4"
description = "A command-line interface for interacting with Jira"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "Ryan Punt", email = "ryan@mirum.org" },
]
keywords = ["jira", "cli", "atlassian", "project-management", "command-lint", "python", "cli-tool"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "cac-core>=0.3.2,<1.0.0",
    "tabulate>=0.9.0",
    "jira>=3.8.0,<4.0.0",
    "pyyaml>=6.0.2",
    "keyring>=25.5.0",
    "argcomplete>=3.6.2"
]

[project.scripts]
jira = "cac_jira.cli.main:main"

[project.urls]
homepage = "https://mirum.org/cac-jira/"
repository = "https://github.com/rpunt/cac-jira"

[tool.poetry]
packages = [{include = "cac_jira"}]
include = ["cac_jira/config/*.yaml"]

[tool.poetry.group.dev.dependencies]
# cac-core = {path = "../core", develop = true}
mypy = "^1.3.0"
types-pyyaml = "^6.0.12"
types-tabulate = "^0.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.poetry.group.lint.dependencies]
black = ">=23.3,<25.0"
isort = "^5.12.0"
pylint = "^2.17.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0301",  # line-too-long
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
