[project]
name = "cac-jira"
version = "0.5.2"
description = "A command-line interface for interacting with Jira"
license = "MIT"
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "Ryan Punt", email = "ryan@mirum.org" },
]
keywords = ["jira", "cli", "atlassian", "project-management", "command-lint", "python", "cli-tool"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "cac-core>=0.4.0,<1.0.0",
    "tabulate>=0.9.0",
    "jira>=3.8.0,<4.0.0",
    "pyyaml>=6.0.2",
    "keyring>=25.5.0",
    "argcomplete>=3.6.2"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.3.0",
    "types-pyyaml>=6.0.12",
    "types-tabulate>=0.9.0",
]
test = [
    "pytest>=7.3.1",
]
lint = [
    "black>=23.3,<25.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
]
all = [
    "mypy>=1.3.0",
    "types-pyyaml>=6.0.12",
    "types-tabulate>=0.9.0",
    "pytest>=7.3.1",
    "black>=23.3,<25.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
jira = "cac_jira.cli.main:main"

[project.urls]
homepage = "https://mirum.org/cac-jira/"
repository = "https://github.com/rpunt/cac-jira"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["cac_jira*"]

[tool.setuptools.package-data]
"cac_jira" = ["config/*.yaml"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
